samples/_failures_safe/1761002223_d09277_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e6bc7f6.c: In function ‘simulate_state_machine’:
./samples/SAFE/__tmp_5e6bc7f6.c:176:12: error: missing terminating " character
  176 |     printf("Starting state machine simulation\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5e6bc7f6.c:176:5: error: expected expression at end of input
  176 |     printf("Starting state machine simulation\n
      |     ^~~~~~
./samples/SAFE/__tmp_5e6bc7f6.c:176:5: error: expected declaration or statement at end of input
